--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
  "scripts": {
   "build": "babel src --out-dir dist",
   "start": "yarn build && node dist/server.js",
-  "lint": "./node_modules/.bin/eslint ."
+  "lint": "./node_modules/.bin/eslint .",
+  "test": "jest"
  },
  "repository": {
   "url": "https://github.com/zky829/cheap-cheap-chicken"
@@ -47,10 +48,14 @@
   "@babel/plugin-syntax-import-meta": "^7.0.0",
   "@babel/plugin-transform-async-to-generator": "^7.0.0",
   "@babel/preset-env": "^7.0.0",
+  "babel-core": "7.0.0-bridge.0",
+  "babel-jest": "^23.6.0",
   "eslint": "^5.9.0",
   "eslint-config-airbnb-base": "^13.1.0",
   "eslint-plugin-import": "^2.14.0",
+  "eslint-plugin-jest": "^22.0.0",
   "eslint-plugin-jsx-a11y": "^6.1.2",
-  "eslint-plugin-react": "^7.11.1"
+  "eslint-plugin-react": "^7.11.1",
+  "jest": "^23.6.0"
  }
 }
